added first project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>Robb</h1>
+      <h1>Robb Burson</h1>
       <nav>
         <ul>
           <li>
@@ -27,51 +27,96 @@
         </ul>
       </nav>
     </header>
-    <div class="pic">
-        
-    </div>
+    <div class="pic"></div>
     <div class="content">
-    <section id="about-me">
-      <div class="flex-column">
-        <h2 class="section-title primary-border">About Me</h2>
-      </div>
-      <div class="flex-div">
-        <p>
-          Bacon ipsum dolor amet excepteur duis rump proident laborum tri-tip
-          non enim in aute aliquip turducken filet mignon ground round t-bone.
-          Laboris proident pastrami, bacon ut ham do minim venison. Ipsum cillum
-          dolor burgdoggen hamburger. Consequat tongue lorem cupidatat ribeye,
-          ham drumstick culpa leberkas. Rump laboris eu minim capicola.
-        </p>
-      </div>
-    </section>
-    <section id="work">
-      <div class="flex-column">
-        <h2 class="section-title primary-border">Work</h2>
-      </div>
-      <div class="flex-div">
-        <p>Projects go here</p>
-      </div>
-    </section>
-    <section id="contact-me">
-      <div class="flex-column">
-        <h2 class="section-title primary-border">Contact Me</h2>
-      </div>
-      <div class="flex-div">
-        <p>Links to Contact Info go here</p>
-      </div>
-    </section>
-    <section id="resume">
-      <div class="flex-column">
-        <h2 class="section-title primary-border">Résumé</h2>
-      </div>
-      <div class="flex-div">
-        <p>Resume goes here</p>
-      </div>
-    </section>
-</div>
-<footer>
-    <h2> &#9875; Made by Robb Burson</h2>
-</footer>
+      <section id="about-me">
+        <div class="flex-column">
+          <h2 class="section-title primary-border">About Me</h2>
+        </div>
+        <div class="flex-div">
+          <p>
+            Bacon ipsum dolor amet sunt jerky short ribs jowl, ham hock est pork
+            chop turducken prosciutto do ad pig. In qui ad andouille cupim
+            alcatra ham consectetur eu. Buffalo turkey spare ribs, culpa quis
+            bresaola chuck tail rump turducken ut labore laboris venison pork.
+            Pork chop officia ut filet mignon ex minim pancetta prosciutto
+            dolore commodo corned beef in excepteur. Mollit incididunt aute, qui
+            doner tenderloin reprehenderit in pork loin enim dolor. Lorem
+            exercitation in est bresaola excepteur.
+          </p>
+          <p>
+            Shank capicola veniam et, nostrud ad in commodo ground round
+            consectetur nisi tempor qui pork loin. Picanha ut buffalo culpa
+            voluptate laboris. Frankfurter voluptate salami, burgdoggen dolore
+            shank veniam in chuck qui. Veniam bacon ut fatback.
+          </p>
+          <p>
+            Nostrud corned beef ea exercitation t-bone ut fugiat. Cupim irure
+            bacon, proident consectetur shankle flank ham hock shoulder
+            consequat. Exercitation sint ad meatloaf, meatball pig shankle
+            cillum aliqua. Swine voluptate ut bresaola, quis pork belly aliqua
+            alcatra chicken sirloin chislic tenderloin enim ball tip. Hamburger
+            brisket laborum esse. Nostrud frankfurter exercitation, rump t-bone
+            hamburger quis magna meatball brisket ground round labore qui.
+            Hamburger aute tongue leberkas venison kevin ut short ribs
+            incididunt pork loin drumstick ipsum ut ullamco pork.
+          </p>
+        </div>
+      </section>
+      <section id="work">
+        <div class="flex-column">
+          <h2 class="section-title primary-border">Work</h2>
+        </div>
+        <div class="flex-div">
+            <a href="https://robburson.github.io/run-buddy/" target="_blank" class="run-buddy secondary-border">
+                <div >
+                    <div>
+                        <h4>Run Buddy</h4>
+                        HTML/CSS 
+                    </div>
+                </div>
+            </a>
+          <p>Projects go here</p>
+        </div>
+      </section>
+      <section id="contact-me">
+        <div class="flex-column">
+          <h2 class="section-title primary-border">Contact Me</h2>
+        </div>
+        <div class="flex-div">
+          <address>
+            P: 660.492.0621 || E:
+            <a href="mailto:rob.burson@bearsheregaming.com" target="_blank"
+              >rob.burson@bearsheregaming.com</a
+            >
+          </address>
+        </div>
+      </section>
+      <section id="resume">
+        <div class="flex-column">
+          <h2 class="section-title primary-border">Professional Experience</h2>
+        </div>
+        <div class="flex-div">
+          <p>
+            <a
+              class="experience-link"
+              href="https://www.linkedin.com/in/robb07/"
+              target="_blank"
+              >LinkedIn</a
+            >
+            <span>||</span>
+            <a
+              class="experience-link"
+              href="https://github.com/RobBurson"
+              target="_blank"
+              >GitHub</a
+            >
+          </p>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <h2>&#9875; Made by Robb Burson</h2>
+    </footer>
   </body>
 </html>
