multiple projects and attempted media query

--- a/index.html
+++ b/index.html
@@ -68,14 +68,30 @@
           <h2 class="section-title primary-border">Work</h2>
         </div>
         <div class="flex-div">
-            <a href="https://robburson.github.io/run-buddy/" target="_blank" class="run-buddy secondary-border">
-                <div >
-                    <div>
-                        <h4>Run Buddy</h4>
-                        HTML/CSS 
-                    </div>
-                </div>
-            </a>
+          <a
+            href="https://robburson.github.io/run-buddy/"
+            target="_blank"
+            class="run-buddy proj featured-item secondary-border"
+          >
+            <div>
+              <div>
+                <h4>Run Buddy</h4>
+                <p>HTML/CSS</p>
+              </div>
+            </div>
+          </a>
+          <a
+            href="https://github.com/JerryRobertson/Downtime-Activities"
+            target="_blank"
+            class="dta proj secondary-border"
+          >
+            <div>
+              <div>
+                <h4>Downtime Activities</h4>
+                <p>CSS/React</p>
+              </div>
+            </div>
+          </a>
           <p>Projects go here</p>
         </div>
       </section>
